[package]
name = "runs_inside_qemu"
description = """
Small no_std-lib that checks if the binary is running inside a QEMU virtual machine.
Only works on x86/x86_64 platforms.
"""
version = "1.2.0"
edition = "2021"
categories = ["no-std"]
keywords = ["QEMU"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/runs_inside_qemu"
repository = "https://github.com/phip1611/runs_inside_qemu"
documentation = "https://docs.rs/runs_inside_qemu"

[dependencies]
log = { version = "0.4", default-features = false }

# Exclude dependency for illegal arches
# => that way, the compiler_error!()-macro in lib.rs gets active
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "10.2"

# for examples
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dev-dependencies]
x86 = "0.43"
