[package]
name = "runs_inside_qemu"
description = """
Small no_std lib that checks if the code is running inside a QEMU virtual
machine.

Uses `cpuid` and currently only works on x86/x86_64.
"""
version = "1.3.0"
edition = "2024"
categories = ["no-std"]
keywords = ["QEMU"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/runs_inside_qemu"
repository = "https://github.com/phip1611/runs_inside_qemu"
documentation = "https://docs.rs/runs_inside_qemu"
rust-version = "1.85.1"

[dependencies]
log = { version = "0.4", default-features = false }

# Exclude dependency for illegal arches
# => that way, the compiler_error!()-macro in lib.rs gets active
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "11.6"

# for examples
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dev-dependencies]
x86 = "0.52"
